--- a/data/interface/index.html
+++ b/data/interface/index.html
@@ -175,7 +175,12 @@
           <div class="option">
             <input type="checkbox" id="mute" title="When recording the screen, mute the system audio.">
             <label for="mute" data-title="When recording the screen, mute the system audio.">Mute</label>
-          </div>          
+          </div>
+        </div>
+        <div class="section">
+          <div class="option">
+            <input type="text" id="filepath" spellcheck="false">
+          </div>
         </div>
       </div>
       <!-- -->
