--- a/data/interface/index.html
+++ b/data/interface/index.html
@@ -12,8 +12,8 @@
       <table>
         <tr>
           <td id="draw" title="Draw on page addon">
-            <svg width="13" height="13" viewBox="0 0 32 32">
-              <path d="M30,15H19v-1c0-0.6-0.4-1-1-1h-4c-0.6,0-1,0.4-1,1v0.5c-3.1-1-5.6-3.4-6.5-6.5H7c0.6,0,1-0.4,1-1V3c0-0.6-0.4-1-1-1H3  C2.4,2,2,2.4,2,3v4c0,0.6,0.4,1,1,1h1.4c0.7,2.9,2.6,5.4,5,7H2c-0.6,0-1,0.4-1,1s0.4,1,1,1h11v1c0,0.6,0.4,1,1,1h4c0.6,0,1-0.4,1-1  v-0.5c3.1,1,5.6,3.4,6.5,6.5H25c-0.6,0-1,0.4-1,1v4c0,0.6,0.4,1,1,1h4c0.6,0,1-0.4,1-1v-4c0-0.6-0.4-1-1-1h-1.4  c-0.7-2.9-2.6-5.4-5-7H30c0.6,0,1-0.4,1-1S30.6,15,30,15z"/>
+            <svg width="14" height="14" viewBox="0 0 32 32">
+              <path d="M30,15H19v-1c0-0.6-0.4-1-1-1h-4c-0.6,0-1,0.4-1,1v0.5c-3.1-1-5.6-3.4-6.5-6.5H7c0.6,0,1-0.4,1-1V3c0-0.6-0.4-1-1-1H3 C2.4,2,2,2.4,2,3v4c0,0.6,0.4,1,1,1h1.4c0.7,2.9,2.6,5.4,5,7H2c-0.6,0-1,0.4-1,1s0.4,1,1,1h11v1c0,0.6,0.4,1,1,1h4c0.6,0,1-0.4,1-1 v-0.5c3.1,1,5.6,3.4,6.5,6.5H25c-0.6,0-1,0.4-1,1v4c0,0.6,0.4,1,1,1h4c0.6,0,1-0.4,1-1v-4c0-0.6-0.4-1-1-1h-1.4 c-0.7-2.9-2.6-5.4-5-7H30c0.6,0,1-0.4,1-1S30.6,15,30,15z"/>
             </svg>
           </td>
         </tr>
@@ -37,14 +37,14 @@
       <table>
         <tr>
           <td id="reload" title="Reload UI">
-            <svg width="11" height="11" viewBox="0 0 512 512">
+            <svg width="12" height="12" viewBox="0 0 512 512">
               <path d="M281.525,228.102l104.758-78.042 c12.082-12.085,12.082-24.259,0-36.342L281.525,35.674c-3.274-2.359-7.359-3.725-11.723-3.725c-10.992,0-19.803,8.536-19.803,19.083  v35.429C144.611,86.737,59.205,172.046,59.205,277.258c0,105.396,85.672,190.793,191.248,190.793 c98.03,0,178.809-73.498,189.977-168.169c0.092-0.275,0.367-3.187,0.367-4.455c0-9.992-8.181-18.169-18.261-18.169h-45.793 c-14.993,0-26.349,10.355-27.893,18.986c-8.811,46.156-49.519,80.954-98.397,80.954c-55.329,0-100.127-44.701-100.127-99.94 c0-55.064,44.523-99.667,99.674-99.941v35.437c0,10.541,8.811,19.076,19.803,19.076C274.166,231.83,278.251,230.471,281.525,228.102 z"/>
             </svg>
           </td>
         </tr>
         <tr>
           <td id="support" title="Open support page">
-            <svg width="11" height="11" viewBox="0 0 1792 1792">
+            <svg width="12" height="12" viewBox="0 0 1792 1792">
               <path d="M1088 1256v240q0 16-12 28t-28 12h-240q-16 0-28-12t-12-28v-240q0-16 12-28t28-12h240q16 0 28 12t12 28zm316-600q0 54-15.5 101t-35 76.5-55 59.5-57.5 43.5-61 35.5q-41 23-68.5 65t-27.5 67q0 17-12 32.5t-28 15.5h-240q-15 0-25.5-18.5t-10.5-37.5v-45q0-83 65-156.5t143-108.5q59-27 84-56t25-76q0-42-46.5-74t-107.5-32q-65 0-108 29-35 25-107 115-13 16-31 16-12 0-25-8l-164-125q-13-10-15.5-25t5.5-28q160-266 464-266 80 0 161 31t146 83 106 127.5 41 158.5z"/>
             </svg>
           </td>
@@ -59,6 +59,11 @@
       </table>
     </div>
     <div class="logo"></div>
+    <div id="theme" title="Dark | Light mode">
+      <svg width="12" height="12" viewBox="0 0 122.8799 122.8799">
+        <path d="M 63.550085,1.4875858 A 60.101027,60.101027 0 0 0 3.45,61.587666 60.101027,60.101027 0 0 0 63.550085,121.6899 60.101027,60.101027 0 0 0 119.56373,83.196612 50.463617,50.463617 0 0 1 102.0998,86.352622 50.463617,50.463617 0 0 1 51.637166,35.887862 50.463617,50.463617 0 0 1 65.189815,1.5691534 60.101027,60.101027 0 0 0 63.550085,1.4875858 Z"/>
+      </svg>
+    </div>
     <div class="container">
       <!-- -->
       <div class="row" category="video">
